Fix gap in items for responsiveness

--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ button{
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 32px;
+    gap: 40px;
 }
 
 .item{
